# ushe-bridge-ingest

./: Dockerfile  Dockerfile.base  Dockerfile.unittest  README.md  cloud-build-base.yaml  cloud-build-deploy.yaml  cloud-build-pr-test.yaml  context.json  di_columns.json  docker-compose.yaml  execute_testing_commands.sh  jsonparsetest.py  mpi_columns.json  parquetparsetest.py  setup.cfg  synthetic_data 1.parquet  test_schema.json
dataproc_package/: .coverage  README.md  __init__.py  config.yaml  conftest.py  pyproject.toml
dataproc_package/conda.recipe/: meta.yaml
dataproc_package/dataframe_factories/: BaseProdTableLookup.py  BaseSparkDataframeFactory.py  __init__.py
dataproc_package/dataframe_factories/buildings/: BuildingDataframeFactory.py  BuildingDataframeSchema.py  __init__.py  building_schema.json  conftest.py
dataproc_package/dataframe_factories/courses/: CourseDataframeFactory.py  CourseDataframeSchema.py  __init__.py  conftest.py  course_schema.json
dataproc_package/dataframe_factories/dataframe_readers/: BaseDataframeReader.py  CSVDataframeReader.py  ExcelDataframeReader.py  ParquetDataframeReader.py  __init__.py
dataproc_package/preprocess/: BasePreprocessor.py  __init__.py  conftest.py
dataproc_package/schema_checkers/: BaseSchemaChecker.py  __init__.py
dataproc_package/schema_sinks/: buildings.json  courses.json
dataproc_package/sink_writers/: __init__.py
dataproc_package/utils/: __init__.py  gcs_pubsub_helpers.py  gcs_reader_helpers.py  read_yaml_config.py
dataproc_package/verify/: BaseQualityChecker.py
entrypoints/: test_main.py  (+1 more)
(+86 files in other folders)
